src/test/deca/syntax/valid/class_included.deca
class Animal{

      protected int pattes=4;

      void affichePattes(){
      	   
	   println("OK");
      }


}
