src/test/deca/syntax/invalid/bad_field.deca
class Kaamelott{

    int protected xD = 4;
}